--- a/index.html
+++ b/index.html
@@ -137,12 +137,15 @@
                 <div class="price-zag">Акции</div>
                 <div class="price-list">
                     <div class="price-left">
-                        <span class="akcii">При заказе 4-х часов + 1 час в подарок</span>
-                        <span><img src="images/family/Present.png" class="present"></img></span>
+                        <div>
+                            <span class="akcii">Скидка 10% в честь дня рождения</span>
+                            <span style="vertical-align: middle;"><img src="images/family/dr.png" class="present"></img></span>
+                        </div>
+                        <div class="time" style="width: 330px; font-size: 15px;">- Скидка действует за 3 дня до дня рождения и 3 дня после дня рождения. При себе необходимо иметь документ, подтверждающий личность</div>
                     </div>
                     <div class="price-right">
-                        <span class="akcii">Скидка 10% в честь дня рождения</span>
-                        <span style="vertical-align: middle;"><img src="images/family/dr.png" class="present"></img></span>
+                        <span class="akcii">При заказе 4-х часов + 1 час в подарок</span>
+                        <span><img src="images/family/Present.png" class="present"></img></span>
                     </div>
                 </div>
             </div>
