--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 <li class="menu-item" onclick="banya()" id="banyaItem" style="color:#D2B48C">Общественная баня</li>
                 <li class="menu-item" onclick="familyNumber()" id="familyItem">Семейный номер</li>
                 <li class="menu-item">Меню</li>
-                <li class="menu-item">Цены</li>
                 <li class="menu-item">Режим работы</li>
                 <li class="menu-item">Правила посещения</li>
                 <li class="menu-item">Контакты</li>
@@ -129,23 +128,25 @@
                     </div>
                 </div>
             </div>
-            <div class="price" id="priceDop" style="display: block; height: 70px;">
-                <div class="dop">- ЦЕНЫ ДЛЯ КОМПАНИИ ДО 10 ЧЕЛОВЕК, СВЫШЕ 10 ЧЕЛОВЕК — 200 РУБ. ЗА 1 ЧАС С ЧЕЛОВЕКА</div>
-                <div class="dop">- МИНИМАЛЬНЫЙ ЗАКАЗ — 2 ЧАСА</div>
-            </div>
-            <div class="price" id="discounts" style="display: block;">
-                <div class="price-zag">Акции</div>
-                <div class="price-list">
-                    <div class="price-left">
-                        <div>
-                            <span class="akcii">Скидка 10% в честь дня рождения</span>
-                            <span style="vertical-align: middle;"><img src="images/family/dr.png" class="present"></img></span>
+            <div id="discounts" style="display: none;">
+                <div class="price" style="height: 70px;">
+                    <div class="dop">- ЦЕНЫ ДЛЯ КОМПАНИИ ДО 10 ЧЕЛОВЕК, СВЫШЕ 10 ЧЕЛОВЕК — 200 РУБ. ЗА 1 ЧАС С ЧЕЛОВЕКА</div>
+                    <div class="dop">- МИНИМАЛЬНЫЙ ЗАКАЗ — 2 ЧАСА</div>
+                </div>
+                <div class="price">
+                    <div class="price-zag">Акции</div>
+                    <div class="price-list">
+                        <div class="price-left">
+                            <div>
+                                <span class="akcii">Скидка 10% в честь дня рождения</span>
+                                <span style="vertical-align: middle;"><img src="images/family/dr.png" class="present"></img></span>
+                            </div>
+                            <div class="time" style="width: 330px; font-size: 15px;">- Скидка действует за 3 дня до дня рождения и 3 дня после дня рождения. При себе необходимо иметь документ, подтверждающий личность</div>
                         </div>
-                        <div class="time" style="width: 330px; font-size: 15px;">- Скидка действует за 3 дня до дня рождения и 3 дня после дня рождения. При себе необходимо иметь документ, подтверждающий личность</div>
-                    </div>
-                    <div class="price-right">
-                        <span class="akcii">При заказе 4-х часов + 1 час в подарок</span>
-                        <span><img src="images/family/Present.png" class="present"></img></span>
+                        <div class="price-right">
+                            <span class="akcii">При заказе 4-х часов + 1 час в подарок</span>
+                            <span><img src="images/family/Present.png" class="present"></img></span>
+                        </div>
                     </div>
                 </div>
             </div>
