--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
         </div>
         <!-- ---- -->
         <!-- ------- -->
+        <!-- Города -->
+        <div class="cities-background">
+            <div class="cities">
+                <div class="city">Новосибирск</div>
+                <div class="city">Якутск</div>
+                <div class="city">Кольцово</div>
+            </div>
+        </div>
         <!-- footer -->
         <div class="footer">
 
