--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <!-- Города -->
         <div class="cities-background">
             <div class="cities">
-                <div class="city">Новосибирск</div>
+                <div class="city" style="background-color: #D2B48C;">Новосибирск</div>
                 <div class="city">Якутск</div>
                 <div class="city">Кольцово</div>
             </div>
