--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@
         </div>
         <!-- footer -->
         <div class="footer">
-
+            <a href="https://go.2gis.com/u66wp"><div class="footer-adress">
+                <div>г. Новосибирск, Трикотажный 5-й переулок 23</div>
+                <div style="text-align: center; margin-top: 5px;">292-07-09</div>
+            </div></a>
+            <div class="copyright"> &#169; Берлога 2023 г.</div>
         </div>
         <!-- ------ -->
     </body>
