--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
+        <meta name="viewport" content="initial-scale=1">
     </head>
     <body>
         <!-- header -->
@@ -155,7 +156,7 @@
                             <div class="time" style="width: 330px; font-size: 15px;">- Скидка действует за 3 дня до дня рождения и 3 дня после дня рождения. При себе необходимо иметь документ, подтверждающий личность</div>
                         </div>
                         <div class="price-right">
-                            <span class="akcii">При заказе 4-х часов + 1 час в подарок</span>
+                            <span class="akcii" style="top: -13px;">При заказе 4-х часов + 1 час в подарок</span>
                             <span><img src="images/family/Present.png" class="present"></img></span>
                         </div>
                     </div>
