--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="price-list">
                         <div class="price-left">
                             <div>
-                                <span class="akcii">Скидка 10% в честь дня рождения</span>
+                                <span class="akcii" style="top: -13px;">Скидка 10% в честь дня рождения</span>
                                 <span style="vertical-align: middle;"><img src="images/family/dr.png" class="present"></img></span>
                             </div>
                             <div class="time" style="width: 330px; font-size: 15px;">- Скидка действует за 3 дня до дня рождения и 3 дня после дня рождения. При себе необходимо иметь документ, подтверждающий личность</div>
