--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="menu-list">
                 <li class="menu-item" onclick="banya()" id="banyaItem" style="color:#D2B48C">Общественная баня</li>
                 <li class="menu-item" onclick="familyNumber()" id="familyItem">Семейный номер</li>
-                <li class="menu-item">Меню</li>
+                <a href="menu.html"> <li class="menu-item">Меню</li></a>
                 <li class="menu-item">Правила посещения</li>
                 <li class="menu-item">Контакты</li>
                 <li class="menu-item">Вакансии</li>
