--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
         <!-- Главное меню -->
         <nav class="main-menu">
             <ul class="menu-list">
-                <li class="menu-item" >Общественная баня</li>
+                <a href="index.html"><li class="menu-item" >Общественная баня</li></a>
                 <li class="menu-item" >Семейный номер</li>
                 <li class="menu-item" style="color:#D2B48C">Меню</li>
                 <li class="menu-item">Правила посещения</li>
@@ -35,7 +35,9 @@
         </nav>
         <!-- ------------- -->
         <!-- Content -->
+        <div class="menu-background">
 
+        </div>
         <!-- Города -->
         <div class="cities-background">
             <div class="cities">
