--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- ------- -->
         <!-- Главный экран -->
         <div class="main">
-            <img class="main-background" src="images/background.jpg"></img>
+            <img class="main-background" src="images/test_fon.jpg"></img>
             <div class="main-text">
                 <p>Берлога</p>
                 <p class="main-address">г.Новосибирск, Трикотажный 5-й переулок 23</p>
@@ -150,7 +150,7 @@
                     <div class="price-list">
                         <div class="price-left">
                             <div>
-                                <span class="akcii" style="top: -13px;">Скидка 10% в честь дня рождения</span>
+                                <span class="akcii" style="">Скидка 10% в честь дня рождения</span>
                                 <span style="vertical-align: middle;"><img src="images/family/dr.png" class="present"></img></span>
                             </div>
                             <div class="time" style="width: 330px; font-size: 15px;">- Скидка действует за 3 дня до дня рождения и 3 дня после дня рождения. При себе необходимо иметь документ, подтверждающий личность</div>
@@ -170,7 +170,7 @@
             <div class="cities">
                 <div class="city" style="background-color: #D2B48C;">Новосибирск</div>
                 <div class="city">Якутск</div>
-                <div class="city">Кольцово</div>
+                <div class="city">Краснообск</div>
             </div>
         </div>
         <!-- footer -->
