--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
         <!-- ------- -->
         <!-- Главный экран -->
         <div class="main">
-            <img class="main-background" src="images/test_fon.jpg"></img>
+            <img class="main-background" src="images/banya/Image1.jpg"></img>
             <div class="main-text">
                 <p>Берлога</p>
                 <p class="main-address">г.Новосибирск, Трикотажный 5-й переулок 23</p>
                 <p class="main-telephone">тел.:292-07-09</p>
+            </div>
+            <div class="circles">
+                <div class="circle" style="background:white"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
             </div>
         </div>
         <!-- ------------- -->
