--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <p class="main-address">г.Новосибирск, Трикотажный 5-й переулок 23</p>
                 <p class="main-telephone">тел.:292-07-09</p>
             </div>
+            <img class="str-left" src="images/left.png"></img>
+            <img class="str-right" src="images/right.png"></img>
             <div class="circles">
                 <div class="circle" style="background:white"></div>
                 <div class="circle"></div>
