add script for circle

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <p class="main-address">г.Новосибирск, Трикотажный 5-й переулок 23</p>
                 <p class="main-telephone">тел.:292-07-09</p>
             </div>
-            <img class="str-left" src="images/left.png"></img>
-            <img class="str-right" src="images/right.png"></img>
+            <img class="str-left" src="images/left.png" onclick="swipeLeft()"></img>
+            <img class="str-right" src="images/right.png" onclick="swipeRight()"></img>
             <div class="circles">
-                <div class="circle" style="background:white"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
+                <div class="circle" style="background:white" id="circle1"></div>
+                <div class="circle" id="circle2"></div>
+                <div class="circle" id="circle3"></div>
             </div>
         </div>
         <!-- ------------- -->
