--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
         <!-- ------- -->
         <!-- Главный экран -->
         <div class="main">
-            <img class="main-background" src="images/im6-1.jpg"></img>
-            <!-- <img class="test-class" src="images/berloga_logo.png"></img> -->
+            <img class="main-background" src="images/banya/Image1.jpg"></img>
             <div class="main-text">
-                <!-- <p>Берлога</p> -->
-                <p class="main-address">Добро пожаловать в современную общественную баню</p>
+                <p>Берлога</p>
                 <p class="main-address">г.Новосибирск, Трикотажный 5-й переулок 23</p>
                 <p class="main-telephone">тел.:292-07-09</p>
             </div>
