--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <noscript><div><img src="https://mc.yandex.ru/watch/96312506" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
     <meta name="yandex-verification" content="0a0ab009886e4f9b" />
+    <meta name="description" content="Берлога нск новосибирск банный комплекс"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
